--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div class="row panda-bg-info p-5 d-flex align-items-center">
                           <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
-                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                            <h1>$420</h1>
+                            <p>This is the best LCD TV in the world for people who just want to waste time in front of funky world.</p>
+                            <h1>$620</h1>
                             <button class="panda-btn-bg-color">buy now</button>
                           </div>
 
@@ -64,9 +64,9 @@
                   <div class="carousel-item mt-4">
                     <div class="row panda-bg-info p-5 d-flex align-items-center">
                       <div class="col-lg-7">
-                        <h1>Cool Dude Headphone</h1>
-                        <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                        <h1>$420</h1>
+                        <h1> Mega LCD TV For Sports</h1>
+                        <p>This is the best LCD in the world for people who just want to waste time in front of funky world.</p>
+                        <h1>$720</h1>
                         <button class="panda-btn-bg-color">buy now</button>
                       </div>
 
@@ -78,8 +78,8 @@
                   <div class="carousel-item mt-4">
                     <div class="row panda-bg-info p-5 d-flex align-items-center">
                       <div class="col-lg-7">
-                        <h1>Cool Dude Headphone</h1>
-                        <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                        <h1>X-Box for your living room</h1>
+                        <p>This is the best X-Box in the world for people who just want to waste time in front of funky world.</p>
                         <h1>$420</h1>
                         <button class="panda-btn-bg-color">buy now</button>
                       </div>
@@ -92,11 +92,11 @@
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                  <span class="sr-only"></span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                  <span class="sr-only"></span>
                 </a>
               </div>
 
