--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                           </div>
 
                           <div class="col-lg-5">
-                            <img class="d-block w-100" src="images/banner-images/headphone.png" alt="First slide">
+                            <img class="d-block w-100" src="./images/banner-images/headphone.png" alt="First slide">
                           </div>
                       </div>
                     
@@ -71,7 +71,7 @@
                       </div>
 
                       <div class="col-lg-5">
-                        <img class="d-block w-100" src="images/banner-images/tv.png" alt="First slide">
+                        <img class="d-block w-100" src="./images/banner-images/tv.png" alt="First slide">
                       </div>
                   </div>
                   </div>
@@ -85,7 +85,7 @@
                       </div>
 
                       <div class="col-lg-5">
-                        <img class="d-block w-100" src="images/banner-images/xbox.png" alt="First slide">
+                        <img class="d-block w-100" src="./images/banner-images/xbox.png" alt="First slide">
                       </div>
                   </div>
                   </div>
@@ -111,19 +111,19 @@
             <div class="col-lg-4 col-md-6 col-12">
               <div class="d-flex align-items-center justify-content-between p-3 border bg-warning rounded-3">
                 <h1 class=" text-white">Watch</h1>
-                <img src="/images/categories/watch.png" alt="">
+                <img src="./images/categories/watch.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
               <div class="d-flex align-items-center justify-content-between p-3 border bg-success rounded-3">
                 <h1 class=" text-white">Bag</h1>
-                <img  src="/images/categories/bag.png" alt="">
+                <img  src="./images/categories/bag.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
               <div class="d-flex align-items-center justify-content-between p-3 border bg-info rounded-3">
                 <h1 class=" text-white">Shoe</h1>
-                <img  src="/images/categories/shoes.png" alt="">
+                <img  src="./images/categories/shoes.png" alt="">
               </div>
             </div>
             
