--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
           <div class="col">
             <div class="card h-100 shadow-lg border-0">
-              <img src="/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -162,7 +162,7 @@
           </div>
           <div class="col">
             <div class="card h-100 shadow-lg border-0">
-              <img src="/images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -182,7 +182,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
             <div class="card shadow-lg border-0 h-100">
-              <img src="/images/bags/bag-1.png" class="card-img-top" alt="...">
+              <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
                 <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
@@ -194,7 +194,7 @@
           </div>
           <div class="col">
             <div class="card h-100 shadow-lg border-0">
-              <img src="/images/bags/bag-2.png" class="card-img-top" alt="...">
+              <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -206,7 +206,7 @@
           </div>
           <div class="col">
             <div class="card h-100 shadow-lg border-0">
-              <img src="/images/bags/bag-3.png" class="card-img-top" alt="...">
+              <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
