--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
             <div class="card shadow-lg border-0 h-100">
-              <img src="/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
                 <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
